5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1679_1100.log
== TEST (2019-05-02 07:52:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	animal = ("Tartaruga")
	elif x == 5:
		animal = ("Garça")
	elif x == 10:
		animal = ("Arara")
	elif x == 20:
		animal = ("Mico-leão-dourado")
	elif x == 50:
		animal = ("Onça-pintada")
	elif x == 100:
		animal = ("Garoupa")
else:
	animal = ("invalido")
print("Animal: ",animal)
-- ERROR:
File "XXXX", line 10
    elif x == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:53:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	animal = ("Tartaruga")
	if x == 5:
		animal = ("Garca")
	elif x == 10:
		animal = ("Arara")
	elif x == 20:
		animal = ("Mico-leão-dourado")
	elif x == 50:
		animal = ("Onça-pintada")
	elif x == 100:
		animal = ("Garoupa")
else:
	animal = ("invalido")
print("Animal: ",animal)
-- OUTPUT:
Entrada:  100
Animal:  invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:53:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	animal = ("Tartaruga")
	if x == 5:
		animal = ("Garça")
	elif x == 10:
		animal = ("Arara")
	elif x == 20:
		animal = ("Mico-leão-dourado")
	elif x == 50:
		animal = ("Onça-pintada")
	elif x == 100:
		animal = ("Garoupa")
else:
	animal = ("invalido")
print("Animal: ",animal)
-- OUTPUT:
Entrada:  100
Animal:  invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:54:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	animal = ("Tartaruga")
	elif x == 5:
		animal = ("Garça")
	elif x == 10:
		animal = ("Arara")
	elif x == 20:
		animal = ("Mico-leão-dourado")
	elif x == 50:
		animal = ("Onça-pintada")
	elif x == 100:
		animal = ("Garoupa")
else:
	animal = ("invalido")
print("Animal: ",animal)
-- ERROR:
File "XXXX", line 10
    elif x == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:54:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	animal = ("Tartaruga")
	if x == 5:
		animal = ("Garça")
	elif x == 10:
		animal = ("Arara")
	elif x == 20:
		animal = ("Mico-leão-dourado")
	elif x == 50:
		animal = ("Onça-pintada")
	elif x == 100:
		animal = ("Garoupa")
else:
	animal = ("invalido")
print("Animal: ",animal)
-- OUTPUT:
Entrada:  100
Animal:  invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:54:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	if x == 5:
		y = ("Garça")
	elif x == 10:
		y = ("Arara")
	elif x == 20:
		y = ("Mico-leão-dourado")
	elif x == 50:
		y = ("Onça-pintada")
	elif x == 100:
		y = ("Garoupa")
else:
	y = ("invalido")
print("Animal: ",y)
-- OUTPUT:
Entrada:  100
Animal:  invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:55:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	if x == 5:
		y = ("Garça")
		elif x == 10:
			y = ("Arara")
		elif x == 20:
			y = ("Mico-leão-dourado")
		elif x == 50:
			y = ("Onça-pintada")
		elif x == 100:
			y = ("Garoupa")
else:
	y = ("invalido")
print("Animal: ",y)
-- ERROR:
File "XXXX", line 12
    elif x == 10:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 07:59:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	elif x == 5:
		y = ("Garça")
		elif x == 10:
			y = ("Arara")
			elif x == 20:
				y = ("Mico-leão-dourado")
				elif x== 50:
					y = ("Onça-pintada")
					elif x==100:
						y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ",y)
-- ERROR:
File "XXXX", line 10
    elif x == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:00:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
		elif x == 10:
			y = ("Arara")
			elif x == 20:
				y = ("Mico-leão-dourado")
				elif x== 50:
					y = ("Onça-pintada")
					elif x==100:
						y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ",y)
-- ERROR:
File "XXXX", line 12
    elif x == 10:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:00:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
elif x == 10:
y = ("Arara")
elif x == 20:
y = ("Mico-leão-dourado")
elif x== 50:
y = ("Onça-pintada")
elif x==100:
y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ",y)
-- ERROR:
File "XXXX", line 13
    y = ("Arara")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:01:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
elif x == "10":
y = ("Arara")
elif x == 20:
y = ("Mico-leão-dourado")
elif x== 50:
y = ("Onça-pintada")
elif x==100:
y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ",y)
-- ERROR:
File "XXXX", line 13
    y = ("Arara")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:01:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	elif x == 5:
		y = ("garça")

print("Animal: ",y)
-- ERROR:
File "XXXX", line 10
    elif x == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:02:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
		if x == 5:
			y = ("garça")

print("Animal: ",y)
-- ERROR:
File "XXXX", line 10
    if x == 5:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:02:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	if x == 5:
		y = ("garça")

print("Animal: ",y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal: ",y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:02:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	elif x == 5:
		y = ("garça")

print("Animal: ",y)
-- ERROR:
File "XXXX", line 10
    elif x == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:02:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	elif (x == 5):
		y = ("garça")

print("Animal: ",y)
-- ERROR:
File "XXXX", line 10
    elif (x == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:03:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif (x == 5):
	y = ("garça")

print("Animal: ",y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal: ",y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:03:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif (x == 5):
	y = ("garça")

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:03:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif (x == 5):
	y = ("garça")

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:03:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif (x == 5):
	y = ("garça")
	
y = 1

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:03:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif (x == 5):
	y = ("garça")

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:04:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
elif (x == 5):
	y = ("Garça")

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:04:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if x == 2:
	y = ("Tartaruga")
	elif (x == 5):
		y = ("Garça")

print("Animal: ", y)
-- ERROR:
File "XXXX", line 10
    elif (x == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:05:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif (x == 5):
	y = "Garça"
elif (x == 10):
	y = "Arara"

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:05:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif (x == 5):
	y = "Garça"
elif (x == 10):
	y = "Arara"

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:05:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif (x == 5):
	y = "Garca"
elif (x == 10):
	y = "Arara"

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:05:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif (x == 5):
	y = "Garca"
elif (x == 10):
	y = "Arara"

print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Animal: ", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:06:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onça-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:06:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onça-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:06:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onça-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:06:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garça")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onça-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leão-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:07:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:07:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- EXECUTION TIME:
0.213228
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:08:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- EXECUTION TIME:
0.184868
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:08:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:08:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal: ",y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:08:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal:",y)
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:08:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada: ",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal:",y)
-- EXECUTION TIME:
0.220044
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:08:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:08:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	y = ("Tartaruga")
elif x == 5:
	y = ("Garca")
elif x == 10:
	y = ("Arara")
elif x == 20:
	y = ("Mico-leao-dourado")
elif x== 50:
	y = ("Onca-pintada")
elif x==100:
	y = ("Garoupa")
else:
	y = "invalido"

print("Animal:",y)
-- EXECUTION TIME:
0.217629
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:10:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garça")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leão-dourado")
elif x== 50:
	print("Animal: Onça-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garça")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leão-dourado")
elif x== 50:
	print("Animal: Onça-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x== 50:
	print("Animal: Onca-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x== 50:
	print("Animal: Onca-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x== 50:
	print("Animal: Onca-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x== 50:
	print("Animal: Onca-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x== 50:
	print("Animal: Onca-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x== 50:
	print("Animal: Onca-pintada")
elif x==100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:11:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x == 50:
	print("Animal: Onca-pintada")
elif x == 100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:11:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x == 50:
	print("Animal: Onca-pintada")
elif x == 100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- EXECUTION TIME:
0.147914
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:12:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif x == 5:
	print("Animal: Garca")
elif x == 10:
	print("Animal: Arara")
elif x == 20:
	print("Animal: Mico-leao-dourado")
elif x == 50:
	print("Animal: Onca-pintada")
elif x == 100:
	print("Animal: Garoupa")
else:
	print("Animal: invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:14:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:14:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("digite o valor do animal: "))

print("Entrada:",x)

if (x == 2):
	print("Animal: Tartaruga")
elif (x == 5):
	print("Animal: Garca")
elif (x == 10):
	print("Animal: Arara")
elif (x == 20):
	print("Animal: Mico-leao-dourado")
elif (x == 50):
	print("Animal: Onca-pintada")
elif (x == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")


-- EXECUTION TIME:
0.172147
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
